	doc/Makefile.am: Rename exmpp_error to exmpp_stanza.

	* src/core/exmpp_jlib.erl, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Remove
	exmpp_jlib.

	* src/core/exmpp_internals.erl: Add functions to generale a random ID.

	* src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl,
	src/client/exmpp_client_binding.erl: Use exmpp_internals for random
	ID.

2008-04-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Second round of commits for the Big Cleanup.

	* src/server/exmpp_server_binding.erl,
	src/client/exmpp_client_binding.erl,
	src/server/exmpp_server_compression.erl,
	src/client/exmpp_client_compression.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/client/exmpp_client_legacy_auth.erl: Update to use the new
	modules/structures. Add basic documentation. Style.

	* testsuite/check_legacy_auth.erl: Update testsuite for
	exmpp_server_legacy_auth and exmpp_client_legacy_auth.

2008-04-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	First round of commits for the Big Cleanup.

	* include/exmpp.hrl, c_src/exmpp_expat_drv.c: Add a "default_ns"
	member to #xmlnselement; we keep the default namespace in it,
	regardless of the namespace of the current element. Style.

	* c_src/exmpp_stringprep_drv.c: Add a command to return the port
	driver $Revision$. Style.

	* src/core/exmpp_internals.erl, src/core/exmpp_stringprep.erl: Use
	exceptions for error handling. Add basic documentation.

	* src/core/exmpp_xml.erl: Use exceptions for error handling. Use
	exmpp_internals for port driver load/unload. Add function clauses for
	accept "undefined" as an XML element. Change several functions to
	return "undefined" instead of an empty string. Use the new
	"default_ns" member during serialization. Update documentation.
	Style.

	* testsuite/check_xml_parser.erl,
	testsuite/check_xml_attribute_handlers.erl,
	testsuite/check_xml_element_handlers.erl,
	testsuite/check_xml_cdata_handlers.erl, testsuite/check_xml_path.erl,